# gmsl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gmsl.sln
.github/workflows/: cmake-single-platform.yml  publish-release.yml
cmake/modules/: FindCoreClrEmbed.cmake
gmsl-interop/: CMakeLists.txt
gmsl-interop/src/: interop.cpp
gmsl-loader/: CMakeLists.txt
gmsl-loader/include/: proxy.h
gmsl-loader/res/: version.def
gmsl-loader/src/: dllmain.cpp
gmsl-modapi/: gmsl-modapi.csproj
gmsl-modapi/src/: Extension.cs  GMSLMod.cs  GmlInterop.cs  IGMSLMod.cs  ModInfo.cs
gmsl-modapi/src/Hooker/: AsmCursor.cs  CreateExtensions.cs  GmlSafeExtensions.cs  HookExtensions.cs  UndertaleInstructionExtensions.cs
gmsl-modapi/src/Logger/: LogLevel.cs  Logger.cs
gmsl-patcher/: CMakeLists.txt  gmsl-patcher.csproj
gmsl-patcher/src/: Program.cs
